fixing overflow button text

--- a/src/styles.css
+++ b/src/styles.css
@@ -135,6 +135,11 @@ nav li {
   align-items: center;
 }
 
+footer .container--flex--row {
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .button {
   border: solid 2px white;
   color: white;
@@ -143,6 +148,8 @@ nav li {
   padding-top: 3px;
   padding-bottom: 3px;
   margin-bottom: 10px;
+  white-space: normal;
+  display: inline-block;
 }
 
 .button--black {
@@ -175,10 +182,6 @@ nav li {
   background-color: #f4f4f4;
   padding-top: 7%;
   padding-bottom: 7%;
-}
-
-.li--footer {
-  margin: 4%;
 }
 
 /* ----------------------TEXT STYLES----------------------- */
@@ -295,8 +298,8 @@ button:hover {
   }
 
   footer ul {
-    margin-top: 10px;
-    margin-bottom: 25px;
+    margin-top: 20px;
+    margin-bottom: 50px;
   }
 
   .nav--link {
@@ -361,6 +364,13 @@ button:hover {
     margin-left: 15px;
     margin-right: 15px;
   }
+
+  .li--footer {
+    padding-left: 7px;
+    padding-right: 7px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+  }
   .container {
     flex-direction: column;
   }
@@ -368,6 +378,7 @@ button:hover {
     margin-bottom: 50px;
   }
   .card {
+    max-height: 320px;
     margin-top: 20px;
     margin-bottom: 21px;
     text-align: center;
@@ -474,6 +485,9 @@ button:hover {
   }
   .slide {
     height: 500px;
+  }
+  .card {
+    max-height: 580px;
   }
   .nav--link {
     font-size: 25px;
@@ -583,6 +597,9 @@ button:hover {
     height: 32px;
     width: 15px;
   }
+  .card {
+    max-height: 680px;
+  }
 
   header p {
     font-size: 16px;
@@ -632,6 +649,10 @@ button:hover {
   .button {
     font-size: 25px;
   }
+  footer ul {
+    margin-top: 30px;
+    margin-bottom: 100px;
+  }
 
   .text--modal {
     margin-top: 240px;
@@ -672,11 +693,17 @@ button:hover {
     margin-bottom: 20px;
   }
   footer ul {
-    margin-bottom: 80px;
+    margin-bottom: 180px;
   }
   .button,
   .li--footer {
     font-size: 35px;
+  }
+  .li--footer {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
   a.button {
     margin-bottom: 300px;
@@ -688,6 +715,9 @@ button:hover {
   }
   #gallery {
     min-height: 800px;
+  }
+  .card {
+    max-height: 700px;
   }
   .slide {
     height: 600px;
@@ -849,6 +879,10 @@ button:hover {
     right: -22%;
     height: 32px;
     width: 15px;
+  }
+
+  .card {
+    max-height: 600px;
   }
 
   .card p {
